# evalguard

./: README.md  pyproject.toml
evalguard/: __init__.py  core.py
tests/: test_edge_cases.py  test_evalguard.py  test_thread_safety.py
