[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalguard"
version = "0.1.0"
description = "Simple, zero-dependency validation for AI agent outputs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "EvalGuard Contributors" }
]
keywords = ["ai", "agents", "llm", "testing", "validation", "langchain", "crewai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/yolojewjitsu/evalguard"
Repository = "https://github.com/yolojewjitsu/evalguard"
Issues = "https://github.com/yolojewjitsu/evalguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["evalguard"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
